--- a/constellations/gemini-user/src/afh/afh.sass
+++ b/constellations/gemini-user/src/afh/afh.sass
@@ -3,6 +3,7 @@
 #view-afh
     width: 70%
     margin: 0 auto $spacing24x
+    padding: $spacing6x 0
     font-family: $fontFamilyRoboto
 
     &  h1
