--- a/constellations/gemini-user/src/programs/programs.sass
+++ b/constellations/gemini-user/src/programs/programs.sass
@@ -9,8 +9,16 @@ $cardSpacing: $spacing6x
     margin: 0 auto
     padding: $spacing1x 0 $spacing12x
 
+    h1
+        margin: $spacing6x 0
+        font-family: $fontFamilyRockwell
+        color: $colorPrimary
+
+        @media screen and (max-width: $mediaWidth1)
+            text-align: center
+
     p
-        margin: $spacing6x 0 $spacing4x
+        margin: $spacing6x 0 0
 
         @media screen and (max-width: $mediaWidth1)
             text-align: center
